added service to yaml
